Fix weird sidebar shifting bug when dialog is open

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -83,4 +83,10 @@
   html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
+
+  body {
+    @apply bg-white text-neutral-900 selection:bg-primary-500/30
+selection:text-primary-950 dark:bg-neutral-950 dark:text-neutral-100
+dark:selection:text-primary-50;
+  }
 }
